Dark mode error fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@ body {
   overflow: hidden;
   overflow-y: auto;
   font-family: "OpenSans-Regular";
-  transition: 0.3s ease all;
+  transition: .3s ease all;
 }
 body.dark {
   background: #202025;
@@ -103,7 +103,7 @@ button {
   text-transform: uppercase;
 }
 
-body.dark h1, body.dark h2, body.dark p, body.dark .navbar-collapse{
+body.dark h1, body.dark h2, body.dark p{
   color: white;
 }
 
@@ -111,10 +111,6 @@ body.dark .card-body p{
   color: black;
 }
 
-body.dark #main-nav .container {
-  background: #202025;
-  box-shadow: lightblue;
-}
 body.dark #main-nav a a {
   color: gainsboro;
 }
@@ -192,7 +188,7 @@ body.dark #main-nav a a:hover {
   left: 0;
   right: unset;
   border-radius: 100px;
-  transition: 0.3s ease all;
+  transition: .3s ease all;
   box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 .switch.active {
